1-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: odoo
  labels:
    name: odoo
