3-deploy-odoo-db.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: odoo-db
  namespace: odoo
  labels:
    app: odoo-shop
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odoo-shop
        tier: backend
    spec:
      containers:
      - image: postgres:10.0
        name: odoo-db
        ports:
        - containerPort: 5432
          name: odoo-db
        volumeMounts:
        - name: odoo-db-pvc
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: odoo-db-pvc
        persistentVolumeClaim:
          claimName: odoo-db-pvc
