2-services-odoo-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-db
  namespace: odoo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"my-first-port":"HTTPS","my-second-port":"HTTP"}'
  labels:
    app: odoo-shop
spec:
  ports:
    - port: 5432
  selector:
    app: odoo-shop
    tier: backend
  type: NodePort
