4-service-odoo-shop.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-shop
  namespace: odoo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"my-first-port":"HTTPS","my-second-port":"HTTP"}'
  labels:
    app: odoo-shop
spec:
  ports:
    - port: 8069
  selector:
    app: odoo-shop
    tier: frontend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: odoo2
  namespace: odoo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"my-first-port":"HTTPS","my-second-port":"HTTP"}'
  labels:
    app: odoo2
spec:
  ports:
    - port: 8069
  selector:
    app: odoo2
    tier: frontend
  type: NodePort
