8-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: odoo
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx/client_max_body_size: 250m
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - abiezer.info
    secretName: wordpress-tls
  rules:
  - host: abiezer.info
    http:
      paths:
      - path: /
        backend:
          serviceName: odoo-shop
          servicePort: 8069
